--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,71 +1,90 @@
-body{
-    background-color: rgb(180, 143, 180);
+body {
+  background-color: rgb(180, 143, 180);
 }
 
-#landing-header{
-    z-index: 1;
-    position: relative;
-    text-align: center;
-    padding-top: 35vh;
+#landing-header {
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  padding-top: 35vh;
 }
 
-#landing-header h1{
-    color: white;  
-    size: 100px;  
-    margin-bottom: 50px;
+#landing-header h1 {
+  color: white;
+  font-size: 5em;
+  margin-bottom: 50px;
 }
 
-.slideshow{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.slideshow {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-.btn-more{
+
+.btn-more {
   background-color: rgb(116, 63, 116);
   border: none;
+  font-size: 2em;
 }
-.slideshow li{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    opacity: 0;
-    z-index: 0;
-    animation: imageAnimation 15s linear infinite; 
+
+.slideshow li {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  z-index: 0;
+  animation: imageAnimation 15s linear infinite;
+}
+
+/* for xs and s screens */
+
+@media only screen and (max-width: 767px) {
+  #landing-header h1 {
+    font-size: 3em;
+  }
+  .btn-more {
+    font-size: 1.8em;
+  }
 }
 
 /* Each list item needs a background-image
  and the last four need an animation-delay 
  (this way they all fire off one after the other in ten second intervals): */
-.slideshow li:nth-child(1) { 
-    background-image: url(images/house.jpg); 
-  }
-  .slideshow li:nth-child(2) { 
-    background-image: url(images/rocks.jpg);
-    animation-delay:3s; 
-  }
-  .slideshow li:nth-child(3) { 
-    background-image: url(images/reader.jpg);
-    animation-delay: 6s; 
-  }
-  .slideshow li:nth-child(4) { 
-    background-image: url(images/flower.jpg);
-    animation-delay: 9s; 
-  }
-  .slideshow li:nth-child(5) { 
-    background-image: url(images/rino.jpg);
-    animation-delay: 12s; 
-  }
+
+.slideshow li:nth-child(1) {
+  background-image: url(images/house.jpg);
+}
+
+.slideshow li:nth-child(2) {
+  background-image: url(images/rocks.jpg);
+  animation-delay: 3s;
+}
+
+.slideshow li:nth-child(3) {
+  background-image: url(images/reader.jpg);
+  animation-delay: 6s;
+}
+
+.slideshow li:nth-child(4) {
+  background-image: url(images/flower.jpg);
+  animation-delay: 9s;
+}
+
+.slideshow li:nth-child(5) {
+  background-image: url(images/rino.jpg);
+  animation-delay: 12s;
+}
 
 /* If we have 5 background images visible for 5 seconds each, 
 then the time it takes to fade the image in and keep it 
@@ -78,29 +97,30 @@ from 0% to 10%, then we keep it visible until 20% is reached and begin
 the fadeout from 20% to 30%, the 5 second fadeout overlaps 
 the next image's 5 second fadein, which is what creates the crossfade effect */
 
-  @keyframes imageAnimation { 
-      /* From 0% to 10% (the beginning of our animation) the list item 
+@keyframes imageAnimation {
+  /* From 0% to 10% (the beginning of our animation) the list item 
       begins changing it's opacity from 0 to 1 (invisible to visible) */
-    0% { 
-      opacity: 0; 
-      animation-timing-function: ease-in;
-    }
-    /* The list item's opacity then stays at 1 until it reaches 20% 
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in;
+  }
+  /* The list item's opacity then stays at 1 until it reaches 20% 
     at which point it fades back out, reaching 0 at 30% and 
     staying at 0 for the remainder of the animation */
-    10% {
-      opacity: 1;
-      animation-timing-function: ease-out;
-    }
-    20% {
-      opacity: 1
-    }
-    30% {
-      opacity: 0
-    }
+  10% {
+    opacity: 1;
+    animation-timing-function: ease-out;
   }
+  20% {
+    opacity: 1
+  }
+  30% {
+    opacity: 0
+  }
+}
 
-  /* Older browser support - .no-cssanimations class added by modernizr */
+/* Older browser support - .no-cssanimations class added by modernizr */
+
 .no-cssanimations .slideshow li {
-	opacity: 1;
+  opacity: 1;
 }
