--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -64,7 +64,7 @@ nav .navbar-nav li a.loggeduser:hover {
 
 .jumbotron {
     background: rgb(247, 245, 248);
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.8);
     padding: 2em;
     margin-top: 3em;
 }
@@ -116,7 +116,7 @@ h1 {
 }
 
 .caption h4 {
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.8);
 }
 
 .caption>a {
@@ -174,6 +174,14 @@ h1 {
 
 /* for xs and s screens */
 @media only screen and (max-width: 767px) {
+
+    .jumbotron {        
+        color: rgba(0, 0, 0, 0.9); 
+    }
+
+    .jumbotron p{
+        font-size: 20px;
+    }
    
     .listofthumbnails a img {
         width: 90%;  
@@ -181,7 +189,7 @@ h1 {
 
     .thumbnail {
         padding: 1em;
-        margin: 1em 5em;        
+        margin: 1em 0;        
     }
 
     .showcard {
