--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -30,7 +30,7 @@ body {
 .btn-more {
   background-color: rgb(116, 63, 116);
   border: none;
-  font-size: 2em;
+  font-size: 3em;
 }
 
 .slideshow li {
@@ -51,10 +51,10 @@ body {
 
 @media only screen and (max-width: 767px) {
   #landing-header h1 {
-    font-size: 3em;
+    font-size: 46px;
   }
   .btn-more {
-    font-size: 1.8em;
+    font-size: 32px;
   }
 }
 
