Remove h1 from landing page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -27,8 +27,7 @@
         </div>
 
 <div id="landing-header">
-<h1 id="welcome">Welcome to WeSeeArt!</h1>
-<a href="/exhibits" class='btn btn-lg btn-primary btn-more'>Visit Art Gallery</a>
+<a href="/exhibits" class='btn btn-lg btn-primary btn-more'>Visit WeSeeArt</a>
 </div>
 
 <ul class="slideshow">
