--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -25,6 +25,8 @@ body {
   background-color: rgb(116, 63, 116);
   border: none;
   font-size: 4em;
+  padding: 0.3em;
+  letter-spacing: 2px;
 }
 
 .slideshow li {
@@ -45,8 +47,7 @@ body {
 
 @media only screen and (max-width: 767px) {
     .btn-more {
-    font-size: 54px;
-    padding: 5px;
+    font-size: 60px;    
   }
 }
 
