--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -74,6 +74,10 @@ nav .navbar-nav li a.loggeduser:hover {
     color: rgb(51, 122, 183);
 }
 
+.jumbotron p{
+    font-size: 26px;       
+}
+
 .jumbotron a {
     margin-top: 0.5em;
 }
@@ -176,12 +180,11 @@ h1 {
 @media only screen and (max-width: 767px) {
 
     .jumbotron {        
-        color: rgba(0, 0, 0, 1); 
+        color: rgba(0, 0, 0, 0.9); 
     }
 
     .jumbotron p{
-        font-size: 20px;
-        font-weight: bolder;
+        font-size: 20px;       
     }
    
     .listofthumbnails a img {
